# a2a

./: .gitignore  404.html  README.md  index.html  sitemap.xml
RAG/: .gitignore  API_DOCUMENTATION.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  README_TESTING.md  TESTING.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_SPECIFICATION.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
RAG/agent/: __init__.py  a2a_agent.py  agent_executor.py  server.py  state.py  tools.py
RAG/config/: .env.example  __init__.py  settings.py
RAG/data/: test_doc.txt
RAG/data/documents/: sample_doc.md
RAG/data/examples/: sample_query.py
RAG/deployment/: README.md  deploy.sh  podman-compose.yml  setup.sh
RAG/deployment/ibm-code-engine/: .env.example  .gitignore  README.md  deploy-all.sh  test-deployment.sh
RAG/deployment/ibm-code-engine/a2a-agent/: Containerfile  deploy.sh
RAG/deployment/ibm-code-engine/data-loader/: Containerfile  deploy.sh  (+1 more)
RAG/deployment/local/: .env.example  Containerfile.a2a  Containerfile.loader  Containerfile.mcp  README.md  deploy.sh  load_data.py  podman-compose.yml  shutdown-auto.sh  shutdown.sh
RAG/mcp_server/: __init__.py  rag_tools.py  server.py
RAG/scripts/: run_tests.sh  start_services.sh  stop_services.sh
RAG/services/: __init__.py  document_processor.py  milvus_client.py  watsonx_client.py
RAG/tests/: test_a2a_client.py  test_document_processor.py  test_e2e_shakespeare.py  test_mcp_server_integration.py  test_mcp_tool_client.py  test_milvus_client.py  test_performance.py  test_summary.py  test_watsonx_client.py
(+42 files in other folders)
